[tool.poetry]
name = "stake"
version = "0.3.0"
readme = "README.md"
homepage = "https://github.com/stabacco/stake-python"
repository = "https://github.com/stabacco/stake-python"
description = "Unofficial https://stake.com.au API wrapper."
authors = ["Stefano Tabacco <tabacco.stefano@gmail.com>"]
license = "Apache-2.0"
keywords = ["stake","trading","stocks","financial","python"]

[tool.poetry.dependencies]
python = "^3.6.1"
python-dotenv = "^0.13.0"
pydantic = "^1.5.1"
inflection = "^0.5.0"
aiohttp = "3.7.4"
single-version = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
pre-commit-hooks = "^3.1.0"
pre-commit = "^2.12.0"
pytest-coverage = "^0.0"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-mock = "^3.3.0"
aioresponses = "0.7.1"
faker = "^4.14.0"
coverage-badge = "^1.0.1"

[tool.isort]
profile = "black"
known_third_party = ["aiohttp", "aioresponses", "dotenv", "inflection", "pkg_resources", "pydantic", "pytest", "single_version"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

packages = [
    { include = "stake",  from="." },
]
