[tool.poetry]
name = "stake"
version = "0.3.0"
readme = "README.md"
homepage = "https://github.com/stabacco/stake-python"
repository = "https://github.com/stabacco/stake-python"
description = "Unofficial  https://hellostake.com API wrapper."
authors = ["Stefano Tabacco <tabacco.stefano@gmail.com>"]
license = "Apache-2.0"
keywords = ["stake","trading","stocks","financial","python"]

packages = [
    { include = "stake",  from="." },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
python-dotenv = "^0.13.0"
pydantic = "^2.3"
inflection = "^0.5.0"
aiohttp = "^3.9"
single-version = "^1.2.2"


[tool.poetry.group.dev.dependencies]
bump-pydantic = "^0.8.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pre-commit-hooks = "^3.1.0"
pre-commit = "^4.2.0"
pytest-coverage = "^0.0"
pytest-mock = "^3.3.0"
faker = "^4.14.0"
coverage-badge = "^1.0.1"
pytest-recording = "^0.13.4"


[tool.isort]
profile = "black"
known_third_party = ["aiohttp", "dotenv", "faker", "inflection", "pydantic", "pytest", "pytest_asyncio", "single_version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501", "E731"]
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
